--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.4",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1",
+    "react-loading": "^2.0.3",
+    "react-multi-carousel": "^2.8.4",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
