--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "lucide-react": "^0.363.0",
     "mdb-react-ui-kit": "^7.2.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
@@ -25,9 +28,11 @@
     "react-icons": "^5.0.1",
     "react-loading": "^2.0.3",
     "react-multi-carousel": "^2.8.4",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/node": "20.11.30",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
