--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.15.14",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.363.0",
     "mdb-react-ui-kit": "^7.2.0",
+    "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
